// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL_DEV")
}

model User {
  id                String     @id @default(uuid())
  username          String     @unique
  email             String     @unique
  about             String?
  password          String
  passwordChangedAt DateTime?  @map("password_changed_at")
  createdAt         DateTime   @default(now()) @map("created_at") @db.Timestamptz(3)
  updatedAt         DateTime   @default(now()) @map("updated_at") @db.Timestamptz(3)
  Post              Post[]
  Comment           Comment[]
  Vote              Vote[]
  Question          Question[]
  Answer            Answer[]

  @@map("users")
}

model Post {
  id        String    @id @default(uuid())
  title     String
  url       String
  content   String
  createdAt DateTime  @default(now()) @map("created_at") @db.Timestamptz(3)
  userId    String    @map("user_id")
  User      User      @relation(fields: [userId], references: [id])
  Comment   Comment[]
  Vote      Vote[]
  PostTag   PostTag[]

  @@map("posts")
}

model Comment {
  id              String    @id @default(uuid())
  content         String
  createdAt       DateTime  @default(now()) @map("created_at") @db.Timestamptz(3)
  userId          String    @map("user_id")
  postId          String    @map("post_id")
  User            User      @relation(fields: [userId], references: [id])
  Post            Post      @relation(fields: [postId], references: [id])
  parentId String?   @map("parent_id")
  Parent   Comment?  @relation("replies", fields: [parentId], references: [id], onDelete: Cascade)
  Reply    Comment[] @relation("replies")

  @@map("comments")
}

model Vote {
  id        String   @id @default(uuid())
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(3)
  userId    String   @map("user_id")
  postId    String   @map("post_id")
  User      User     @relation(fields: [userId], references: [id])
  Post      Post     @relation(fields: [postId], references: [id])

  @@map("votes")
}

model Question {
  id          String        @id @default(uuid())
  title       String
  content     String
  createdAt   DateTime      @default(now()) @map("created_at") @db.Timestamptz(3)
  userId      String        @map("user_id")
  User        User          @relation(fields: [userId], references: [id])
  Answer      Answer[]
  QuestionTag QuestionTag[]

  @@map("questions")
}

model Answer {
  id         String   @id @default(uuid())
  content    String
  createdAt  DateTime @default(now()) @map("created_at") @db.Timestamptz(3)
  userId     String   @map("user_id")
  questionId String   @map("question_id")
  User       User     @relation(fields: [userId], references: [id])
  Question   Question @relation(fields: [questionId], references: [id])

  @@map("answers")
}

model Tag {
  id          String        @id @default(uuid())
  name        String        @unique
  createdAt   DateTime      @default(now()) @map("created_at") @db.Timestamptz(3)
  QuestionTag QuestionTag[]
  PostTag     PostTag[]

  @@map("tags")
}

model QuestionTag {
  id         String   @id @default(uuid())
  tagId      String   @map("tag_id")
  questionId String   @map("question_id")
  Tag        Tag      @relation(fields: [tagId], references: [id])
  Question   Question @relation(fields: [questionId], references: [id])

  @@map("question_tags")
}

model PostTag {
  id     String @id @default(uuid())
  tagId  String @map("tag_id")
  postId String @map("post_id")
  Tag    Tag    @relation(fields: [tagId], references: [id])
  Post   Post   @relation(fields: [postId], references: [id])

  @@map("post_tags")
}
